--- a/index.html
+++ b/index.html
@@ -1165,13 +1165,9 @@
             <article
               class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 scroll-element-scale delay-100">
               <div class="text-center">
-                <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4"
-                  aria-hidden="true">
-                  <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M14.828 14.828a4 4 0 01-5.656 0M9 10h1.5a1.5 1.5 0 001.5-1.5V7a4 4 0 118 0v1.5a1.5 1.5 0 001.5 1.5H21">
-                    </path>
-                  </svg>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden">
+                  <img src="assets/ImagemServicos/clareamento.jpg" alt="Serviço de Clareamento Dental"
+                    class="w-full h-full object-cover" loading="lazy" />
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
                   Clareamento
@@ -1185,13 +1181,9 @@
             <article
               class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 scroll-element-scale delay-200">
               <div class="text-center">
-                <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4"
-                  aria-hidden="true">
-                  <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z">
-                    </path>
-                  </svg>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden">
+                  <img src="assets/ImagemServicos/prevencao.jpg" alt="Serviço de Prevenção e Limpeza Dental"
+                    class="w-full h-full object-cover" loading="lazy" />
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
                   Prevenção
@@ -1205,12 +1197,10 @@
             <article
               class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 scroll-element-scale delay-300">
               <div class="text-center">
-                <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4"
-                  aria-hidden="true">
-                  <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                  </svg>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden">
+                  <img src="assets/ImagemServicos/odontologia-do-esporte.jpg"
+                    alt="Odontologia do Esporte - Tratamento para Atletas" class="w-full h-full object-cover"
+                    loading="lazy" />
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
                   Odontologia do Esporte
@@ -1224,13 +1214,9 @@
             <article
               class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 scroll-element-scale delay-400">
               <div class="text-center">
-                <div class="bg-primary/10 w-12 h-12 rounded-full flex items-center justify-center mx-auto mb-4"
-                  aria-hidden="true">
-                  <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                    </path>
-                  </svg>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden">
+                  <img src="assets/ImagemServicos/endodontia.jpg" alt="Serviço de Endodontia - Tratamento de Canal"
+                    class="w-full h-full object-cover" loading="lazy" />
                 </div>
                 <h3 class="text-lg font-semibold text-primary mb-2">
                   Endodontia
