--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
         from {
           opacity: 0;
         }
+
         to {
           opacity: 1;
         }
@@ -942,10 +943,6 @@
                 class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Serviços</a>
             </li>
             <li role="none">
-              <a href="#team" role="menuitem"
-                class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Equipe</a>
-            </li>
-            <li role="none">
               <a href="#gallery" role="menuitem"
                 class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Galeria</a>
             </li>
@@ -1008,10 +1005,6 @@
                   class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Serviços</a>
               </li>
               <li>
-                <a href="#team"
-                  class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Equipe</a>
-              </li>
-              <li>
                 <a href="#gallery"
                   class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Galeria</a>
               </li>
@@ -1046,7 +1039,8 @@
             <div class="bg-gradient-to-r from-primary to-secondary text-white py-16 sm:py-20">
               <div class="container mx-auto px-4 sm:px-6 text-center">
                 <div class="fade-in">
-                  <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold mb-4 sm:mb-6 leading-tight">
+                  <h1
+                    class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold mb-4 sm:mb-6 leading-tight">
                     Odontologia de Excelência,<br />
                     <span class="text-accent">feita com Humanidade e Clareza</span>
                   </h1>
@@ -1081,11 +1075,8 @@
                   </p>
                 </div>
                 <div class="max-w-3xl mx-auto aspect-video rounded-xl overflow-hidden shadow-2xl">
-                  <iframe
-                    class="w-full h-full"
-                    src="https://www.youtube.com/embed/PZyoH2KU0uE"
-                    title="Conheça os Diferentes Tipos de Protetores Bucais Profissionais"
-                    frameborder="0"
+                  <iframe class="w-full h-full" src="https://www.youtube.com/embed/PZyoH2KU0uE"
+                    title="Conheça os Diferentes Tipos de Protetores Bucais Profissionais" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                   </iframe>
@@ -1113,11 +1104,8 @@
                   </p>
                 </div>
                 <div class="max-w-3xl mx-auto aspect-video rounded-xl overflow-hidden shadow-2xl">
-                  <iframe
-                    class="w-full h-full"
-                    src="https://www.youtube.com/embed/YF2et-TCxVA"
-                    title="Protetor Bucal Profissional vs Protetor Bucal Ferve e Morde"
-                    frameborder="0"
+                  <iframe class="w-full h-full" src="https://www.youtube.com/embed/YF2et-TCxVA"
+                    title="Protetor Bucal Profissional vs Protetor Bucal Ferve e Morde" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                   </iframe>
@@ -1416,73 +1404,6 @@
                 </p>
               </div>
             </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- Team Section -->
-      <section id="team" class="py-20 bg-white" aria-labelledby="team-heading">
-        <div class="container mx-auto px-4">
-          <div class="text-center mb-12 scroll-element">
-            <h2 id="team-heading" class="text-3xl md:text-4xl font-bold text-primary mb-4">
-              Nossa Equipe
-            </h2>
-            <p class="text-gray-600 text-lg">
-              Profissionais qualificados e experientes
-            </p>
-          </div>
-
-          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="text-center scroll-element-left delay-100">
-              <div
-                class="bg-gradient-to-br from-primary to-secondary w-32 h-32 rounded-full mx-auto mb-4 flex items-center justify-center">
-                <svg class="w-16 h-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                </svg>
-              </div>
-              <h3 class="text-xl font-semibold text-primary mb-1">
-                Dr. Amanda Vivacqua
-              </h3>
-              <p class="text-gray-600 mb-2">Cirurgiã-Dentista</p>
-              <p class="text-sm text-gray-500">
-                CRO: 12345 | Especialista em Ortodontia
-              </p>
-            </div>
-
-            <div class="text-center scroll-element delay-200">
-              <div
-                class="bg-gradient-to-br from-accent to-primary w-32 h-32 rounded-full mx-auto mb-4 flex items-center justify-center">
-                <svg class="w-16 h-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                </svg>
-              </div>
-              <h3 class="text-xl font-semibold text-primary mb-1">
-                Dr. João Silva
-              </h3>
-              <p class="text-gray-600 mb-2">Implantodontista</p>
-              <p class="text-sm text-gray-500">
-                CRO: 67890 | Especialista em Implantes
-              </p>
-            </div>
-
-            <div class="text-center scroll-element-right delay-300">
-              <div
-                class="bg-gradient-to-br from-secondary to-accent w-32 h-32 rounded-full mx-auto mb-4 flex items-center justify-center">
-                <svg class="w-16 h-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                </svg>
-              </div>
-              <h3 class="text-xl font-semibold text-primary mb-1">
-                Dra. Maria Costa
-              </h3>
-              <p class="text-gray-600 mb-2">Endodontista</p>
-              <p class="text-sm text-gray-500">
-                CRO: 54321 | Especialista em Canal
-              </p>
-            </div>
           </div>
         </div>
       </section>
