melhorias de SEO e google search

--- a/index.html
+++ b/index.html
@@ -4,34 +4,119 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vivacqua Odontologia - Alameda Shopping Empresarial Taguatinga Centro DF | Odontologia do Esporte</title>
+    <title>Vivacqua Odontologia - Dra. Amanda Vivacqua | Dentista em Taguatinga Centro DF</title>
     <meta name="description"
-      content="Vivacqua Odontologia no Alameda Shopping Empresarial, Taguatinga Centro DF. Especializada em Odontologia do Esporte, Prevenção, Clareamento, Tratamentos Restauradores, Endodontia, Cirurgia e Prótese dentária. Atendimento humanizado." />
+      content="Clínica odontológica em Taguatinga Centro DF com Dra. Amanda Vivacqua. Especializada em Odontologia do Esporte, Clareamento, Endodontia, Prevenção e mais. Agende sua consulta! ☎️ (61) 98210-0565" />
     <meta name="keywords"
-      content="odontologia do esporte, prevenção dental, clareamento dental, tratamentos restauradores, endodontia, cirurgia oral, prótese dentária, dentista Taguatinga Centro, Alameda Shopping Empresarial, clínica odontológica DF, dentista Taguatinga, odontologia Taguatinga Centro" />
+      content="dentista taguatinga, odontologia do esporte df, clareamento dental taguatinga, endodontia brasília, protetor bucal profissional, dentista taguatinga centro, clínica odontológica df, dra amanda vivacqua, odontologia brasília, tratamento dental df, dentista alameda shopping" />
+
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="up6PNYEIezCKFJymJtJGL-Nx0eUwzsT79USK1JpTk_E" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://vivacquaondontologiadf.com.br/" />
+
+    <!-- Geo Tags -->
     <meta name="geo.region" content="BR-DF" />
     <meta name="geo.placename" content="Taguatinga Centro, Distrito Federal" />
     <meta name="geo.position" content="-15.8267;-48.0583" />
     <meta name="ICBM" content="-15.8267, -48.0583" />
-    <meta name="author" content="Vivacqua Odontologia" />
+
+    <!-- Author & Developer -->
+    <meta name="author" content="Dra. Amanda Vivacqua - Vivacqua Odontologia" />
     <meta name="developer" content="TogyroGroup - Yago Cerqueira Regis" />
     <meta name="designer" content="TogyroGroup - togyrogroupvictory.com.br" />
     <meta name="copyright" content="© 2025 Vivacqua Odontologia. Website desenvolvido por TogyroGroup" />
-    <meta name="robots" content="index, follow" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="language" content="pt-BR" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+
+    <!-- Business Information -->
+    <meta name="contact" content="odontologiavivacqua@gmail.com" />
+    <meta name="reply-to" content="odontologiavivacqua@gmail.com" />
+    <meta name="phone" content="+55-61-98210-0565" />
+    <meta name="address" content="Alameda Shopping Empresarial, Taguatinga Centro, Brasília - DF" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vivacqua Odontologia - Taguatinga Centro DF" />
+    <meta property="og:url" content="https://vivacquaondontologiadf.com.br/" />
+    <meta property="og:title"
+      content="Vivacqua Odontologia - Dra. Amanda Vivacqua | Dentista em Taguatinga Centro DF" />
     <meta property="og:description"
-      content="Odontologia de excelência com humanidade e clareza. Especializada em Odontologia do Esporte." />
+      content="Clínica odontológica em Taguatinga Centro DF com Dra. Amanda Vivacqua. Especializada em Odontologia do Esporte, Clareamento, Endodontia e mais. Agende sua consulta! ☎️ (61) 98210-0565" />
     <meta property="og:site_name" content="Vivacqua Odontologia" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:image" content="https://vivacquaondontologiadf.com.br/assets/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Logo Vivacqua Odontologia" />
 
-    <!-- Twitter -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Vivacqua Odontologia - Taguatinga Centro DF" />
-    <meta name="twitter:description" content="Odontologia de excelência com humanidade e clareza." />
+    <meta name="twitter:site" content="@draamandavivacqua" />
+    <meta name="twitter:title"
+      content="Vivacqua Odontologia - Dra. Amanda Vivacqua | Dentista em Taguatinga Centro DF" />
+    <meta name="twitter:description"
+      content="Clínica odontológica especializada em Odontologia do Esporte em Taguatinga Centro DF. Agende sua consulta!" />
+    <meta name="twitter:image" content="https://vivacquaondontologiadf.com.br/assets/logo.png" />
+
+    <!-- Structured Data - Local Business Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Dentist",
+      "name": "Vivacqua Odontologia",
+      "image": "https://vivacquaondontologiadf.com.br/assets/logo.png",
+      "description": "Clínica odontológica especializada em Odontologia do Esporte, Clareamento, Endodontia e Prevenção em Taguatinga Centro DF",
+      "url": "https://vivacquaondontologiadf.com.br/",
+      "telephone": "+55-61-98210-0565",
+      "email": "odontologiavivacqua@gmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Alameda Shopping Empresarial",
+        "addressLocality": "Taguatinga Centro",
+        "addressRegion": "DF",
+        "addressCountry": "BR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-15.8267",
+        "longitude": "-48.0583"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "08:00",
+          "closes": "22:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Saturday", "Sunday"],
+          "opens": "14:00",
+          "closes": "22:00"
+        }
+      ],
+      "priceRange": "$$",
+      "sameAs": [
+        "https://www.instagram.com/draamandavivacqua/"
+      ],
+      "medicalSpecialty": [
+        "Odontologia do Esporte",
+        "Clareamento Dental",
+        "Endodontia",
+        "Prevenção Dental"
+      ]
+    }
+    </script>
 
     <link rel="icon" type="image/png" href="assets/logo.png" />
+    <link rel="apple-touch-icon" href="assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
