--- a/index.html
+++ b/index.html
@@ -573,16 +573,24 @@
         position: relative;
         width: 100%;
         overflow: hidden;
+        min-height: 750px;
       }
 
       .carousel-slide {
         display: none;
         width: 100%;
+        min-height: 750px;
         animation: fadeIn 0.5s ease-in;
       }
 
       .carousel-slide.active {
         display: block;
+      }
+
+      .carousel-slide>div {
+        min-height: 750px;
+        display: flex;
+        align-items: center;
       }
 
       @keyframes fadeIn {
@@ -652,7 +660,48 @@
         background: rgba(255, 255, 255, 0.8);
       }
 
+      /* Responsive carousel heights */
+      @media (max-width: 1024px) {
+        .hero-carousel {
+          min-height: 800px;
+        }
+
+        .carousel-slide {
+          min-height: 800px;
+        }
+
+        .carousel-slide>div {
+          min-height: 800px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .hero-carousel {
+          min-height: 850px;
+        }
+
+        .carousel-slide {
+          min-height: 850px;
+        }
+
+        .carousel-slide>div {
+          min-height: 850px;
+        }
+      }
+
       @media (max-width: 640px) {
+        .hero-carousel {
+          min-height: 900px;
+        }
+
+        .carousel-slide {
+          min-height: 900px;
+        }
+
+        .carousel-slide>div {
+          min-height: 900px;
+        }
+
         .carousel-control {
           padding: 12px;
         }
@@ -1032,14 +1081,15 @@
                 class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Galeria</a>
             </li>
             <li role="none">
-              <a href="#contact" role="menuitem"
+              <a href="#appointment" role="menuitem"
                 class="menu-item relative text-gray-700 hover:text-accent transition-colors duration-300 py-2 text-sm xl:text-base">Contato</a>
             </li>
           </ul>
 
           <!-- CTA Button -->
           <div class="hidden lg:block">
-            <a href="#contact"
+            <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank"
+              rel="noopener noreferrer"
               class="bg-primary hover:bg-secondary text-white px-4 xl:px-6 py-2 rounded-full transition-colors duration-300 text-sm xl:text-base">
               Agendar Consulta
             </a>
@@ -1094,13 +1144,14 @@
                   class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Galeria</a>
               </li>
               <li>
-                <a href="#contact"
+                <a href="#appointment"
                   class="block text-gray-700 hover:text-accent text-base sm:text-lg transition-colors duration-300 py-2">Contato</a>
               </li>
             </ul>
 
             <div class="mt-6 sm:mt-8">
-              <a href="#contact"
+              <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank"
+                rel="noopener noreferrer"
                 class="block w-full text-center bg-primary hover:bg-secondary text-white px-4 sm:px-6 py-2 sm:py-3 rounded-full transition-colors duration-300 text-sm sm:text-base">
                 Agendar Consulta
               </a>
@@ -1121,7 +1172,7 @@
         <div class="hero-carousel">
           <!-- Slide 1: Hero Original -->
           <div class="carousel-slide active">
-            <div class="bg-gradient-to-r from-primary to-secondary text-white py-16 sm:py-20">
+            <div class="bg-gradient-to-r from-primary to-secondary text-white py-32 sm:py-40">
               <div class="container mx-auto px-4 sm:px-6 text-center">
                 <div class="fade-in">
                   <h1
@@ -1133,7 +1184,8 @@
                     Cuidamos do seu sorriso com tecnologia de ponta e atendimento humanizado
                   </p>
                   <div class="flex flex-col sm:flex-row sm:space-x-4 space-y-3 sm:space-y-0 justify-center">
-                    <a href="#contact"
+                    <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta."
+                      target="_blank" rel="noopener noreferrer"
                       class="bg-accent hover:bg-teal-600 text-white px-6 sm:px-8 py-3 rounded-full text-base sm:text-lg transition-colors duration-300">
                       Agende Sua Consulta
                     </a>
@@ -1167,7 +1219,8 @@
                   </iframe>
                 </div>
                 <div class="text-center mt-6">
-                  <a href="#contact"
+                  <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta%20para%20fazer%20um%20protetor%20bucal%20profissional."
+                    target="_blank" rel="noopener noreferrer"
                     class="inline-block bg-accent hover:bg-teal-600 text-white px-8 py-3 rounded-full text-lg transition-colors duration-300">
                     Quero um Protetor Profissional
                   </a>
@@ -1196,7 +1249,8 @@
                   </iframe>
                 </div>
                 <div class="text-center mt-6">
-                  <a href="#contact"
+                  <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20avaliação."
+                    target="_blank" rel="noopener noreferrer"
                     class="inline-block bg-accent hover:bg-teal-600 text-white px-8 py-3 rounded-full text-lg transition-colors duration-300">
                     Agendar Avaliação
                   </a>
@@ -1598,7 +1652,7 @@
       </div>
 
       <!-- Appointment Section -->
-      <section id="agendar"
+      <section id="appointment"
         class="py-20 bg-gradient-to-br from-primary via-secondary to-accent text-white relative overflow-hidden"
         aria-labelledby="appointment-heading">
         <!-- Background decorative elements -->
@@ -1607,7 +1661,7 @@
           <div class="absolute bottom-10 left-10 w-96 h-96 bg-white rounded-full blur-3xl"></div>
         </div>
 
-        <div id="contact" class="container mx-auto px-4 relative z-10">
+        <div class="container mx-auto px-4 relative z-10">
           <div class="max-w-4xl mx-auto">
             <!-- Header -->
             <div class="text-center mb-12 scroll-element">
@@ -1681,7 +1735,7 @@
               </div>
 
               <!-- Main CTA Button -->
-              <a href="https://calendar.google.com/calendar/appointments/schedules/YOUR_SCHEDULE_ID" target="_blank"
+              <a href="https://wa.me/556198210565?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank"
                 rel="noopener noreferrer"
                 class="inline-flex items-center justify-center bg-gradient-to-r from-primary to-secondary hover:from-secondary hover:to-primary text-white font-bold text-lg px-10 py-5 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 group">
                 <svg class="w-6 h-6 mr-3 group-hover:rotate-12 transition-transform" fill="none" stroke="currentColor"
@@ -1732,6 +1786,88 @@
                 </svg>
                 Respeitamos sua privacidade. Suas informações são confidenciais e protegidas.
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="py-16 bg-gray-50" aria-labelledby="contact-heading">
+        <div class="container mx-auto px-4">
+          <div class="max-w-4xl mx-auto">
+            <div class="text-center mb-12 scroll-element">
+              <h2 id="contact-heading" class="text-3xl md:text-4xl font-bold text-primary mb-4">
+                Entre em Contato
+              </h2>
+              <p class="text-gray-600 text-lg">
+                Estamos prontos para atendê-lo
+              </p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-8">
+              <!-- Phone -->
+              <div class="text-center scroll-element-scale delay-100">
+                <div class="bg-primary/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
+                    </path>
+                  </svg>
+                </div>
+                <h3 class="text-xl font-semibold text-primary mb-2">Telefone</h3>
+                <a href="tel:+556198210565" class="text-gray-600 hover:text-primary transition-colors">
+                  (61) 98210-0565
+                </a>
+              </div>
+
+              <!-- Email -->
+              <div class="text-center scroll-element-scale delay-200">
+                <div class="bg-primary/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
+                    </path>
+                  </svg>
+                </div>
+                <h3 class="text-xl font-semibold text-primary mb-2">E-mail</h3>
+                <a href="mailto:odontologiavivacqua@gmail.com"
+                  class="text-gray-600 hover:text-primary transition-colors break-all">
+                  odontologiavivacqua@gmail.com
+                </a>
+              </div>
+
+              <!-- WhatsApp -->
+              <div class="text-center scroll-element-scale delay-300">
+                <div class="bg-primary/10 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+                  <svg class="w-8 h-8 text-primary" fill="currentColor" viewBox="0 0 24 24">
+                    <path
+                      d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z" />
+                  </svg>
+                </div>
+                <h3 class="text-xl font-semibold text-primary mb-2">WhatsApp</h3>
+                <a href="https://wa.me/556198210565" target="_blank" rel="noopener noreferrer"
+                  class="text-gray-600 hover:text-primary transition-colors">
+                  (61) 98210-0565
+                </a>
+              </div>
+            </div>
+
+            <!-- Business Hours -->
+            <div class="mt-12 text-center scroll-element">
+              <h3 class="text-2xl font-bold text-primary mb-6">Horário de Atendimento</h3>
+              <div class="inline-block text-left bg-white rounded-xl shadow-md p-8">
+                <div class="space-y-3">
+                  <div class="flex items-center justify-between">
+                    <span class="font-semibold text-gray-700 mr-8">Segunda a Sexta:</span>
+                    <span class="text-gray-600">08:00 - 22:00</span>
+                  </div>
+                  <div class="border-t border-gray-200"></div>
+                  <div class="flex items-center justify-between">
+                    <span class="font-semibold text-gray-700 mr-8">Sábado e Domingo:</span>
+                    <span class="text-gray-600">14:00 - 22:00</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
